Hoàn thành API Đặt chỗ và đã thêm OpenAPI vào để tạo API Document

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,4 +12,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
-        dialect: org.hibernate.dialect.MySQL5Dialect
+#springdoc:
+#  swagger-ui.path: /openapi/swagger-ui.html
+#  api-docs.path: /openapi/v3/api-docs
+#  packagesToScan: com.example.raiwayticketreservation.Controller
+#  pathsToMatch: /**
