--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/railwayticketdb
+    url: jdbc:mysql://127.0.0.1:3306/railwayticketreservationdb
     username: root
     password: 123456789
   jpa:
