--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 <!--			<artifactId>flyway-mysql</artifactId>-->
 <!--		</dependency>-->
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.0.0</version>
