Tạo API Trả vé - Step 1: Hoàn thành API lấy danh sách vé theo thông tin khách đặt

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,6 @@ spring:
         transport.protocol: smtp
         smtp.auth: true
         smtp.starttls.enable: true
+  jackson:
+    serialization:
+      FAIL_ON_EMPTY_BEANS: false
