--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,11 +16,10 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: hophuocduy261020@gmail.com
-    password: qkrcksifghvvlfcx
+    password: phamynnfusgajjwb
     properties:
       mail:
         debug: true
-        transport.protocol: smtp
         smtp.auth: true
         smtp.starttls.enable: true
   jackson:
