Chỉnh sửa file appication.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 #Connect DB
 spring:
+  config:
+    import: env.properties
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/railwayticketreservationdb
-    username: root
-    password: 123456789
+    username: DB_USERNAME
+    password: DB_PASS
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
@@ -15,8 +17,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: hophuocduy261020@gmail.com
-    password: phamynnfusgajjwb
+    username: EMAIL
+    password: MAILSENDER_PASS
     properties:
       mail:
         debug: true
