--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
 			<version>0.11.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring5</artifactId>
+			<version>3.1.1.RELEASE</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
